# Sueca

./: CMakeLists.txt  README.md
src/: Card.cpp  Card.hpp  CardDeck.cpp  CardDeck.hpp  CardTexture.cpp  CardTexture.hpp  Game.cpp  Game.hpp  GameContext.hpp  Player.cpp  Player.hpp  SuecaAI.cpp  SuecaAI.hpp  UIManager.cpp  UIManager.hpp  main.cpp
src/core/: Game.hpp  GameContext.hpp
src/gameplay/: Card.cpp  CardDeck.cpp  CardDeck.hpp  Player.hpp  SuecaAI.hpp
src/ui/: UIManager.hpp
